package dev.dluks.rental.service;

public class RentalService {

    public void createRental() {
    }

    public void completeRental() {
    }

    public void cancelRental() {
    }

}
